Edits per Jira ticket

--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -20,16 +20,20 @@
 	<script src="/assets/js/dynamicTable.js" data-div="memberTable" data-array="memberData" data-sort="rowFirst" type="text/javascript"></script>
 	
 	<div class="tableTitle"><h3>Prebid.js Bidding Partners</h3></div>
-	<script type="text/javascript">
-	    var partnerData=[];
-	    idx=0;
-				
-	    {% for item in site.bidders %}
-		partnerData[idx]={};
-		partnerData[idx].href="/dev-docs/bidders.html#{{item.biddercode}}";
-		partnerData[idx].text="{{item.title}}";
-		idx++;
-	    {% endfor %}
+		{{site.bidders}}
+		<script type="text/javascript">
+		    var partnerData=[];
+		    idx=0;
+		    
+		    console.log()
+					
+		    {% for item in site.bidders %}
+		    	
+				partnerData[idx]={};
+				partnerData[idx].href="/dev-docs/bidders.html#{{item.biddercode}}";
+				partnerData[idx].text="{{item.title}}";
+				idx++;
+		    {% endfor %}
         </script>
 
 	<div id="partnerTable"></div>
