--- a/_includes/left_nav.html
+++ b/_includes/left_nav.html
@@ -38,7 +38,7 @@
 		            				{% if sectionItem.isSectionHeader == 0 and sectionItem.isHeader == 0 %}
 		            							
 		            					<!-- check to see if we are on this page-->            				
-			            				<!-display subsection items with links-->
+			            				<!--display subsection items with links-->
 									{% assign isPage = 0 %}
 				            				{% if sectionItem.link == page.url %}
 										{% assign isPage = 1 %}
@@ -96,7 +96,7 @@
 												{% assign isPage = 1 %}
 											{% endif %}
 				            				
-				            				<!-display subsection items with links-->
+				            				<!--display subsection items with links-->
 				            				{% if subsectionIdx == 0 %}
 					            				<a href="{{thisSubItem.link}}" class="list-group-item list-group-item-action bg-dark text-white">
 						            				{% if isPage == 1 %}
