--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,12 +24,12 @@ h1 {
 }
 
 h3 {
-  color: #95a5a6;
+  color: #555555;
   font-weight: 400;
 }
 
 h4 {
-  color: #95a5a6;
+  color: #555555;
   font-weight: 400;
   font-size: 20px;
 }
