Updated mobile files.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,3 +17,9 @@
 
   gtag('config', 'UA-130832561-1', {'anonymize_ip': true});
 </script>
+
+<script>
+	$(document).ready(function() {
+		$( 'a[href^="http://"]' ).attr( 'target','_blank' );
+	});
+</script>
