--- a/_includes/sandbox/pb-api-test.html
+++ b/_includes/sandbox/pb-api-test.html
@@ -2,31 +2,95 @@
 <!--javascript to read querystring key apiDocTarget and use value to display proper content-->
 <script type="text/javascript">
 	
+	
+	document.addEventListener('DOMContentLoaded', (event) => {
+		document.querySelectorAll('pre code').forEach((block) => {
+			hljs.highlightBlock(block);
+  		});
+	});
+	
 	$( document ).ready(function() {
 		
+		//get the category
 		var queryItems = getUrlVars()
 		var apiDocCategory = queryItems[0][1];
-		
-		var arrDivIds = ["instructions", "configuration", "bids", "server", "targeting", "adunit"];
-		for (var i = 0; i < arrDivIds.length; i++) { 
-			
-			var elementId = arrDivIds[i];
-			
-			var element = document.getElementById(elementId);
-			
-			if (arrDivIds[i] == apiDocCategory.toLowerCase()) { 
-				console.log("match")
-				element.classList.remove("api-off");
-				element.classList.add("api-on");
-			} else { 
-				element.classList.add("api-off");
-				element.classList.remove("api-on");
-			}
-			
-		}
+				
+		//display the category
+		displayFile(apiDocCategory + ".html", "apiCatgories", "api-endpoints");
 				
 		
+		//get the api file the user requested
+		var apiDefinition;
+		if (queryItems.length > 1) {
+			
+			apiDefinition = queryItems[1][1];
+				
+			//need to check and see if the anchor point is attached and strip if it is. (Happens when you refresh screen)
+			if (apiDefinition.includes("#")) { 
+				var arrApiDefinition = apiDefinition.split("#");
+				apiDefinition = arrApiDefinition[0];
+			}
+			
+			//displayFile(apiDefinition + ".html", "apiDocs", "api-definition-display");
+			convertMDToHTML(apiDefinition + ".md", "apiDocs", "api-definition-display");
+			
+			//move to anchor point
+			location.hash = "#apiDocs";
+
+		}
+					
+		
 	});
+	
+	function convertMDToHTML(srcFile, srcDir, divName) { 
+		
+		var convertor = new showdown.Converter();
+		
+		//set up the file path
+		let src = "/sandbox/" + srcDir + "/" + srcFile;
+		
+		//set up destination
+		var element = document.getElementById(divName);
+		
+		//clear out existing html
+		element.innerHTML = "";
+		
+		//read text from file
+		$.ajax({
+			url:src,
+			success: function (data){
+				
+				//convert markdown to html and display
+				element.innerHTML = convertor.makeHtml(data);
+    		}
+  		});
+		
+		//set the classes
+		element.classList.remove("api-off");
+		element.classList.add("api-on");
+		
+	}
+	
+	function displayFile(srcFile, srcDir, divName) { 
+		
+		//set up the file path
+		let src = "/sandbox/" + srcDir + "/" + srcFile;
+		
+		//display the file
+		var element = document.getElementById(divName);
+		//clear out existing html
+		element.innerHTML = "";
+		
+		
+		//load code from file
+		$(element).load(src);
+		
+		
+		//set the classes
+		element.classList.remove("api-off");
+		element.classList.add("api-on");
+		
+	}
 	
 	function getUrlVars() {
 	    var qsParams = [];
@@ -43,7 +107,6 @@
 <!--category list-->
 <div class="container api-files">&nbsp;&nbsp;
 
-		
 		{% assign arrCategories = site.data.pb-api | where: "isFirst", 1 %}
 		
 		<ul style="list-style-type: none; margin: 0; padding: 0; overflow: hidden;">
@@ -57,51 +120,16 @@
 </div>
 
 
-
-
 <!--content display-->
-<div class="container" id="apiDocumentation">
+<div class="container">
 	
-	<div class="api-doc api-on" id="instructions"><h4>Select a category to see API endpoints related to that category.</h4></div>
-	
-	<div class="api-doc api-off" id="configuration">
-		<h4>Configuration</h4>
-		<p>
-		<ul>
-			<li>.setConfig(options)
-				<ul>
-					<li>debugging</li>
-					<li>bidderTimeout</li>
-					<li>maxRequestsPerOrigin</li>
-					<li>disableAjaxTimeout</li>
-					<li>timeoutBuffer</li>
-					<li>bidderOrder</li>
-					<li>enableSendAllBids</li>
-					<li>useBidCache</li>
-					<li>publisherDomain</li>
-					<li>priceGranularity</li>
-					<li>mediaTypePriceGranularity</li>
-					<li>s2sConfig (server-to-server config)</li>
-					<li>userSync</li>
-					<li>sizeConfig and labels (responsive ads)</li>
-					<li>Generic Configuration</li>
-					<li>Troubleshooting your config</li>
-				</ul>
-			</li>
-			<li>.getConfig([string])</li>
-		</ul>
+	<div>
+		<div class="api-doc api-on" id="api-endpoints"><h4>Select a category to see API endpoints related to that category.</h4></div>
 	</div>
 	
-<!--
-	<div class="api-doc api-off" id="bids"><h4>Bid APIs</h4></div>
-
-	<div class="api-doc api-off" id="server"><h4>Server APIs</h4></div>
-	
-	<div class="api-doc api-off" id="targeting"><h4>Targeting APIs</h4></div>
-	
-	<div class="api-doc api-off" id="adunit"><h4>Ad Unit APIs</h4></div>
--->
-	
+	<hr>
+	<a name="apiDocs"></a>
+	<div class="api-off api-definition" id="api-definition-display">&nbsp;</div>
 	
 </div>
 	
