--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,6 +132,7 @@ hr {
 	padding:10px;
 	width: 100%;
 	margin-bottom: 10px;
+
 }
 
 .pb-alert-note { 
@@ -150,6 +151,7 @@ hr {
 	background-color: #ede5ba;
 	color: #85720f;
 	border: 1px solid #85720f;
+	
 
 }
 
@@ -162,19 +164,13 @@ hr {
 /* API */
 
 .pb-category-box { 
-	position: relative;
-	float: left;
+	float: left; 
 	margin-right: 15px;
+	background-color: #eeeeee;
+	border: 1px solid #cccccc;
 	padding-left: 15px;
 	padding-right: 15px;
-	background-color: #f6f8fa;
-	height: 40px;
-	line-height: 40px;
-	border:1px solid #cbcccd;
-}
-
-.pb-category-box a:active { 
-	color: #000000;
+	height: 30px;
 }
 
 .api-doc { 
@@ -187,6 +183,26 @@ hr {
 
 .api-off {
 	display: none;
+}
+
+
+.api-header { 
+	color: #EA9622;
+	font-family: 'Verdana', sans-serif;
+	font-size: 20px;
+	font-weight: 400;
+	margin-bottom: 10px;
+}
+
+.api-table { 
+	width: 60%;
+	margin-left: 20px;
+}
+
+.api-params { 
+	font-weight: 700;
+	margin-bottom: 20px;
+	margin-top:20px;
 }
 
 
