--- a/_includes/api/pb-api-template.html
+++ b/_includes/api/pb-api-template.html
@@ -7,11 +7,11 @@
 		<div class="pb-api-ep-description">This is the endpoint description</div>
 		<div class="pb-api-example">
 			<div class="pb-api-example-title-bar"><p>endpoint</p></div>
-			<div class="pb-api-example-code"><pre style="border:0px;"><code>pbjs.endpoint(arg1, arg2);</code></pre></div>
+			<div class="pb-api-example" id="pb-api-code-block"><pre style="border:0px;"><code>pbjs.setConfig({ debug: true });</code></pre></div>
 		</div>
 		
 		<div class="pb-api-ep-arguments pb-api-on">
-			<div class="pb-api-title">Arguments: <button class="api-display-btn" date-button-type="arguments">Hide Arguments</button></div>
+			<div class="pb-api-title">Arguments: <button class="api-display-btn" id="btn-arguments">Hide Arguments</button></div>
 			<div class="pb-api-arg-list">
 				<ul>
 					<li>
@@ -32,7 +32,7 @@
 			<div class="pb-text">Response Description</div>
 			<div class="pb-api-example">
 				<div class="pb-api-example-title-bar"><p>endpoint response</p></div>
-				<div class="pb-api-example"><pre style="border:0px;"><code>{ response: example }</code></pre></div>
+				<div class="pb-api-example" id="pb-api-code-block"><pre style="border:0px;"><code>{ response: example }</code></pre></div>
 			</div>
 			
 			<div class="pb-api-param-list">
