--- a/_includes/partners.html
+++ b/_includes/partners.html
@@ -1,24 +1,68 @@
+<script src="/assets/js/dynamicTable.js" type="text/javascript"></script>
 
 <div class="partners">
 	
-	<div class="tableTitle"><h3>Prebid.org Members</h3></div>
+	<div class="tableTitle"><h3>Prebid.org Founding Members</h3></div>
 	<script type="text/javascript">
-	var memberData=[];
+	var memberDataFounders=[];
 	var idx=0;
-	
+
 	{% for item in site.data.partners %}
-		{% if item.type == 0 or item.type == 1 %}
-			memberData[idx]={};
-			memberData[idx].href="{{item.link}}";
-			memberData[idx].text="<img src=\"{{item.imgURL}}\" width=\"100\">";
+		{% if item.type == "founder" %}
+			memberDataFounders[idx]={};
+			memberDataFounders[idx].href="{{item.link}}";
+			memberDataFounders[idx].text="<img src=\"{{item.imgURL}}\" width=\"100\">";
 			idx++;
 		{% endif %}
 	{% endfor %}
 	</script>
 
-	<div id="memberTable"></div>
-	<script src="/assets/js/dynamicTable.js" data-div="memberTable" data-array="memberData" data-sort="rowFirst" type="text/javascript"></script>
-	
+	<div id="memberTableFounders"></div>
+	<script>
+	   writeDynamicTable({div: "memberTableFounders", data: "memberDataFounders", sort: "rowFirst", maxcols: 2} );
+	</script>
+
+	<div class="tableTitle"><h3>Prebid.org Standard Members</h3></div>
+	<script type="text/javascript">
+	var memberDataStandard=[];
+	var idx=0;
+
+	{% for item in site.data.partners %}
+		{% if item.type == "standard" %}
+			memberDataStandard[idx]={};
+			memberDataStandard[idx].href="{{item.link}}";
+			memberDataStandard[idx].text="<img src=\"{{item.imgURL}}\" width=\"100\">";
+			idx++;
+		{% endif %}
+	{% endfor %}
+	</script>
+
+	<div id="memberTableStandard"></div>
+	<script>
+	  writeDynamicTable({div:"memberTableStandard", data:"memberDataStandard", sort:"rowFirst"});
+	</script>
+
+	<div class="tableTitle"><h3>Prebid.org Community Members</h3></div>
+	<script type="text/javascript">
+	var memberDataComm=[];
+	var idx=0;
+
+	{% for item in site.data.partners %}
+		{% if item.type == "community" %}
+			memberDataComm[idx]={};
+			memberDataComm[idx].href="{{item.link}}";
+			memberDataComm[idx].text="<img src=\"{{item.imgURL}}\" width=\"75\">";
+			idx++;
+		{% endif %}
+	{% endfor %}
+	</script>
+
+	<div id="memberTableComm"></div>
+	<script>
+	  writeDynamicTable({div: "memberTableComm", data: "memberDataComm", sort:"rowFirst"});
+	</script>
+
+
 	<div class="tableTitle"><h3>Prebid.js Bidding Partners</h3></div>
 	<script type="text/javascript">
 	    var partnerData=[];
@@ -34,6 +78,7 @@
         </script>
 
 	<div id="partnerTable"></div>
-	<script src="/assets/js/dynamicTable.js" data-div="partnerTable" data-array="partnerData" type="text/javascript"></script>
+	<script>
+	   writeDynamicTable({div:"partnerTable", data:"partnerData"});
+	</script>
 </div>
-
