--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,3 +23,5 @@
 		$( 'a[href^="http://"]' ).attr( 'target','_blank' );
 	});
 </script>
+
+<script src="{{site.baseurl}}/assets/js/prism.js"></script>
