add missing container to home layout

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@
 			<p><div>{% include footer.html %}</div></p>
 		</div>
 		
-		<div class="pb-homepage-container pb-homepage-content">
+		<div class="pb-homepage-container pb-homepage-content container">
 			
 			<div class="row">
 				<div class="col-lg-12 pb-top-text">
