Added search to API

--- a/_includes/api/pb-api-test.html
+++ b/_includes/api/pb-api-test.html
@@ -4,6 +4,19 @@
 	
 	$( document ).ready(function() {
 		
+		$('#apiSearch').click(function (e) {
+
+			e.preventDefault();
+			var searchTerm = $("input:first").val();
+			
+			if (!!searchTerm.trim()) { 
+		    	window.location.href = '/sandbox/prebid-api-search.html?searchTerm=' + searchTerm;
+	    	} else { 
+		    	alert("You did not enter any search terms.");
+	    	}
+			
+		});
+		
 		
 		//get the category
 		var queryItems = getUrlVars()
@@ -103,7 +116,8 @@
 
 
 <div class="container pb-api-categories pb-api-list">
-
+	
+		<div>
 		{% assign arrCategories = site.data.pb-api %}
 		
 		<ul style="">
@@ -113,6 +127,14 @@
 		
 		{% endfor %}
 		</ul>
+		</div>
+		
+		<div class="pb-api-search">
+			<form>
+				<input type="text" name="pb-api-search-term">
+				<button id="apiSearch" type="button" value="send" class="btn btn-primary">Go</button>
+			</form>
+		</div>
 	
 </div>
 
