--- a/_includes/api/pb-api-test.html
+++ b/_includes/api/pb-api-test.html
@@ -132,7 +132,7 @@
 		<div class="pb-api-search">
 			<form>
 				<input type="text" name="pb-api-search-term">
-				<button id="apiSearch" type="button" value="send" class="btn btn-primary">Go</button>
+				<button id="apiSearch" type="button" value="send" class="btn btn-primary">Search</button>
 			</form>
 		</div>
 	
