--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,14 +31,9 @@ function OptanonWrapper() { }
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="{{site.baseurl}}/assets/css/docs.min.css" rel="stylesheet">
         
-    <!--for code highlighting-->
-    <link rel="stylesheet" href="/assets/css/tomorrow.css">
-	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.6/highlight.min.js" type="text/javascript" charset="UTF-8"></script>
-	<script type="text/javascript" charset="UTF-8">hljs.initHighlightingOnLoad();</script>
-	
+    <link rel="stylesheet" href="/assets/css/prism.css">
 	<link href="{{site.baseurl}}/assets/css/style.css" rel="stylesheet">
 
-	
 	    
 	<!-- Favicons -->
 	<link href="{{site.baseurl}}/assets/images/favicon.png" rel="icon">
@@ -58,7 +53,7 @@ function OptanonWrapper() { }
         }
     </style>
 
-	
+	<script src="{{site.baseurl}}/assets/js/prism.js"></script>
     <script src="{{site.baseurl}}/assets/js/jquery.min.js"></script>
     <script src="{{site.baseurl}}/assets/js/bootstrap.js"></script>
     <script src="{{site.baseurl}}/assets/js/bootbox.min.js"></script>
